--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -877,9 +877,10 @@ button {
   cursor: url(../Resources/cusor/pointer.cur), pointer;
   background-color: transparent;
   color: white;
-  padding: 6px 22px;
+  padding: 6px;
+  margin-right: 28px;
   border: none;
-  transition: all 0.3s;
+  transition: all 0.3s ease 0s;
 }
 
 .openbtn:hover {
