--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -710,10 +710,10 @@ button {
     margin: 50px 0 0;
   }
 
-  #slideshow-container {
+  /* #slideshow-container {
     display: none;
     visibility: hidden;
-  }
+  } */
 
   #timeline {
     display: none;
@@ -791,6 +791,11 @@ button {
     background-color: var(--main-light);
     text-align: center;
     padding: 50px 30px 0px;
+  }
+
+  #slideshow-container{
+    width: 100%;
+    height: auto;
   }
 }
 
