--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -826,14 +826,14 @@ button {
 
 .sidebar {
   height: 100%;
-  width: 0;
+  width: 250px;
   position: fixed;
   z-index: 2;
   top: 0;
-  left: 0;
+  left: -100%;
   background-color: #fff;
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: 0.7s;
   padding-top: 60px;
   background-position: center;
   background-image: url("../Resources/Bgimg/1258.png");
