--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -194,10 +194,11 @@ html {
   margin-inline-end: 0px;
   font-weight: bold;
   font-family: "Palanquin Dark", sans-serif;
+  background-clip: text;
   -webkit-background-clip: text;
   background-image: url('../Resources/headerBg/17545.jpg');
   color: transparent;
-  background-position: inherit;
+  background-position: center;
 }
 
 #topTitle h1::before {
@@ -1706,4 +1707,61 @@ img {
   text-align: center;
   padding: 50px 80px;
   text-align: justify;
+}
+
+.pre-loder-index{
+  background-color: black;
+  margin: 0;
+  padding: 0 5%;
+  color: #fff;
+  height: 100%;
+  overflow-y: hidden;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  z-index: 999;
+  transition: all 0.5s;
+  animation: fade-out 900ms forwards;
+}
+
+.pre-loder-main h1{
+  font-family: 'Microsoft JhengHei', 'Microsoft Yahei', sans-serif;
+  font-size: 4vh;
+  font-weight: 100;
+  margin: 20px 0 0;
+}
+
+.pre-loder-main{
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+
+.pre-loder-main img{
+  height: 80px;
+  float: left; 
+  margin-right: 8px;
+  cursor: context-menu;
+}
+
+@keyframes fade-out{
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
