--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -1710,7 +1710,7 @@ img {
 }
 
 .pre-loder-index{
-  background-color: black;
+  background-color: var(--main-light);
   margin: 0;
   padding: 0 5%;
   color: #fff;
