--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -715,14 +715,14 @@ button {
     color: #777;
     background-color: var(--main-light);
     text-align: center;
-    padding: 50px 26px 0 15px;
+    padding: 50px 36px 0 25px;
   }
 
   #Bg02 {
     color: #777;
     background-color: var(--bg-w-245);
     text-align: center;
-    padding: 50px 26px 0 15px;
+    padding: 50px 36px 0 25px;
   }
 
   #Bgimg01 {
@@ -734,7 +734,7 @@ button {
 
   #Bgimgh02 {
     width: 20vh;
-    right: 38%;
+    right: 30%;
     position: relative;
     margin: 50px 0 0;
   }
@@ -857,7 +857,7 @@ button {
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.263);
+  background-color: rgb(0 0 0 / 29%);
   overflow-x: hidden;
   transition: visibility 0s linear 400ms, opacity 400ms;
   opacity: 0;
@@ -1751,7 +1751,7 @@ img {
 }
 
 .pre-loder-main img{
-  height: 80px;
+  height: 30%;
   float: left; 
   margin-right: 8px;
   cursor: context-menu;
