--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -826,6 +826,29 @@ button {
     width: 100%;
     height: auto;
   }
+
+  #textContent,
+  #textContent1 {
+    border-radius: 0;
+    border: none;
+    padding: 20px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #aboutTyping {
+    background-color: var(--bg-transform);
+    border-radius: 30px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 10px;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: auto;
+  }
 }
 
 @media screen and (min-width: 1226px) {
@@ -1061,7 +1084,19 @@ font .highlightldzs:hover::after {
 }
 
 font::before {
-  content: "👻";
+  content: "//";
+  margin-right: 5px;
+  color: var(--main-color);
+  font-weight: bold;
+  font-family: "Palanquin Dark", sans-serif;
+}
+
+font::after {
+  content: "//";
+  margin-left: 5px;
+  color: var(--main-color);
+  font-weight: bold;
+  font-family: "Palanquin Dark", sans-serif;
 }
 
 #navbar .navLink:before {
