--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -147,12 +147,16 @@ html {
   background-position: center;
   background-size: cover;
   transition: margin-left 0.5s;
-  background-image: url("../Resources/footerBg/3C10DB36-8B2E-4040-806D-B233281A5364.jpeg");
-  height: 20vh;
+  background-image: url("../Resources/footerBg/20221115_125548577_iOS.jpg");
+  /* height: 20vh; */
   -webkit-animation: fade-in-bck 4s;
   animation: fade-in-bck 4s;
   display: fixed;
   opacity: 0.85;
+  /* margin: 0 50px 0 50px; */
+  display: flex;
+  flex-direction: column;
+  transition: all 0.5s;
 }
 
 @-webkit-keyframes fade-in-bck {
@@ -203,12 +207,13 @@ html {
 
 #topTitle h1::before {
   content: "";
-  background-image: url("../Resources/icon/github.png");
-  background-size: 60px 60px;
+  background-image: url(../Resources/icon/guracode.png);
+  background-size: 110px 70px;
   display: inline-block;
-  width: 60px;
-  height: 60px;
+  width: 110px;
+  height: 70px;
   margin-right: 20px;
+  background-repeat: no-repeat;
 }
 
 #topTitle h2 {
@@ -772,13 +777,13 @@ button {
     background-position: center;
     background-size: cover;
     transition: margin-left 0.5s;
-    background-image: url(../Resources/footerBg/3C10DB36-8B2E-4040-806D-B233281A5364.jpeg);
-    height: 20vh;
+    background-image: url("../Resources/footerBg/20221115_125548577_iOS.jpg");
     -webkit-animation: fade-in-bck 4s;
     animation: fade-in-bck 4s;
     display: fixed;
     opacity: 0.85;
     padding: 20px 20px;
+    transition: all 0.5s;
   }
 
   #snackbar {
@@ -889,8 +894,24 @@ button {
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+    border-radius: 3px 0px 0px 3px;
     user-select: none;
+  }
+
+  #footlink {
+    padding: 0px 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #footUL1,
+  #footUL2 {
+    padding: 10px 20px;
+    list-style: none;
+    margin-top: 0px;
+    text-align: left;
+    display: inline-block;
+    position: relative;
   }
 }
 
@@ -1689,4 +1710,46 @@ img {
   100% {
     opacity: 1;
   }
+}
+
+.footlink {
+  padding: 0 20px;
+}
+
+.footUL {
+  padding: 50px 40px 50px 40px;
+  list-style: none;
+  margin-top: 0px;
+  text-align: left;
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+}
+
+.footULCopy h2 {
+  color: #434343;
+  font-family: "LXGWWenKaiMono";
+  font-size: 20px;
+}
+
+.footULCopy li {
+  color: #4d4848;
+  font-size: 12px;
+}
+
+.footUL li {
+  color: #616161;
+  transition: all 0.5s;
+  cursor: url(../Resources/cusor/pointer.cur), pointer;
+  padding-bottom: 5px;
+}
+
+.footUL li:hover {
+  color: var(--main-color);
+  transition: all 0.5s;
+  text-decoration: underline var(--main-color);
+}
+
+.footUL h2 {
+  color: #797a7a;
 }
