--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -263,7 +263,7 @@ h3 {
 }
 
 .textContent {
-  border: dashed 3px var(--main-color);
+  border: solid 2px rgb(0,0,0);
   border-radius: 30px;
   width: 90%;
   padding: 20px;
@@ -1745,9 +1745,15 @@ img {
   font-size: 20px;
 }
 
-.footULCopy li {
+.footULCopy li, .footcopyLI {
   color: #4d4848;
   font-size: 12px;
+}
+
+.footUL li a {
+  font-weight: 600;
+  text-decoration: none;
+  color: var(--main-color);
 }
 
 .footUL li {
