--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -782,7 +782,7 @@ button {
     animation: fade-in-bck 4s;
     display: fixed;
     opacity: 0.85;
-    padding: 20px 20px;
+    padding: 20px 0;
     transition: all 0.5s;
   }
 
@@ -1754,6 +1754,9 @@ img {
   font-weight: 600;
   text-decoration: none;
   color: var(--main-color);
+  background-color: #fff;
+  padding: 4px;
+  border-radius: 30%;
 }
 
 .footUL li {
