--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -194,6 +194,12 @@ html {
   }
 }
 
+.SPhead{
+  position: absolute;
+  width: 60px;
+  top: 67px;
+}
+
 #topTitle {
   text-align: center;
       position: absolute;
