--- a/CSS/20220810.css
+++ b/CSS/20220810.css
@@ -221,7 +221,7 @@ html {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "BLACK HORIZON Regular";
   background-clip: text;
   -webkit-background-clip: text;
   background-image: url("../Resources/headerBg/17545.jpg");
@@ -231,7 +231,7 @@ html {
 
 #topTitle h1::before {
   content: "";
-  background-image: url(../Resources/icon/rabbit-face_1f430.png);
+  background-image: url('../Resources/icon/rabbit-face_1f430.png');
   background-size: 70px 70px;
   display: inline-block;
   width: 70px;
@@ -303,23 +303,6 @@ h3 {
     background-attachment: scroll;
   }
 }
-
-/*.text {
-    background-color: white;
-    color: black;
-    font-size: 9vw; 
-    font-weight: bold;
-    margin: 0 auto;
-    padding: 10px;
-    width: 50%;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    mix-blend-mode: screen;
-    opacity: 0.9;
-  }*/
 
 #navLogoH {
   width: 50px;
@@ -518,19 +501,19 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 2%;
+  padding: 6px 2%;
   position: fixed;
   top: 0;
   width: 96%;
-  background-color: #ffffff6b;
-  backdrop-filter: blur(10px);
-  z-index: 999;
-  transition: all 0.5s;
+  background-color: rgb(134 132 132 / 42%);
+  backdrop-filter: blur(5px);
+  z-index: 2;
+  transition: all .5s ease 0s;
 }
 
 .navbar-active nav ul li a {
   transition: all 0.5s;
-  color: rgb(118 117 117);
+  color: #fff;
 }
 
 .logo {
@@ -747,7 +730,7 @@ button {
     visibility: visible;
     float: right;
     right: 140px;
-    margin: 0;
+    margin: 0px;
     position: absolute;
     height: 40px;
   }
@@ -760,8 +743,8 @@ button {
     position: fixed;
     top: 0px;
     width: 96%;
-    background-color: rgba(255, 255, 255, 0.42);
-    backdrop-filter: blur(10px);
+    background-color: rgb(134 132 132 / 42%);
+    backdrop-filter: blur(5px);
     z-index: 2;
     transition: all 0.5s ease 0s;
   }
@@ -802,11 +785,6 @@ button {
     position: relative;
     margin: 50px 0 0;
   }
-
-  /* #slideshow-container {
-    display: none;
-    visibility: hidden;
-  } */
 
   #timeline {
     display: none;
@@ -1052,7 +1030,7 @@ button {
 
 .sidebar a:hover {
   color: var(--main-color);
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(240, 240, 240, 0.421);
   backdrop-filter: blur(4px);
 }
 
@@ -1825,7 +1803,7 @@ img {
   text-decoration: none;
   color: var(--main-color);
   background-color: #fff;
-  padding: 4px;
+  padding: 4px 5px;
   border-radius: 30%;
 }
 
